# project-algorithmic-trading

./: .gitignore  404.html  ML Proof of Concept.py  Procfile  README.md  S&P500Companies.csv  S&P500_model  alphaVantagePopulate.py  api.html  app.py  flask_application.py  index.html  main.py  mainClasses.html  markdown-page.html  package-lock.json  package.json  requirements.txt  sitemap.xml  stockData.csv  testing.py
tradester_backend/: build.sh  conf.py  db.sqlite3  manage.py  package-lock.json  pyproject.toml
tradester_backend/_build/html/: .buildinfo  (+5 more)
tradester_backend/auth/: serializers.py  tests.py  urls.py  validators.py  views.py
tradester_backend/docs/: conf.py  index.rst  modules.rst  tradester_backend.rst
tradester_backend/exportToHTML/: .gitignore.html  Makefile.html  Project_Default.xml.html  admin.py.html  apps.py.html  asgi.py.html  conf.py.html  index.html  index.rst.html  make.bat.html  manage.py.html  misc.xml.html  models.py.html  modules.xml.html  profiles_settings.xml.html  settings.py.html  tests.py.html  tradester_backend.iml.html  urls.py.html  vcs.xml.html  views.py.html  workspace.xml.html  wsgi.py.html
tradester_backend/friendship/: admin.py  apps.py  functions.py  models.py  urls.py  views.py
tradester_backend/functions/: functions.py
tradester_backend/heroku_connection/: admin.py  apps.py  functions.py  models.py  urls.py  views.py
tradester_backend/tradester/: admin.py  apps.py  data_handling.py  models.py  tests.py  urls.py  views.py
tradester_backend/tradester_backend/: asgi.py  routers.py  settings.py  urls.py  wsgi.py
(+1247 files in other folders)
