[tool.poetry]
name = "tradester_backend"
version = "0.1.0"
description = ""
authors = ["Jaffar Alzeidi <jaffar.sa139@gmail.com>"]
readme = "README.md"
packages = [{include = "tradester_backend"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.7"
gunicorn = "^20.1.0"
docutils = "^0.19"
whitenoise = {extras = ["brotli"], version = "^6.4.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
